--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.9.1",
+    "@nestjs/mongoose": "^7.2.0",
     "@nestjs/platform-express": "^7.0.0",
     "apollo-server-express": "^2.19.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "graphql": "^15.4.0",
     "graphql-tools": "^7.0.2",
+    "mongoose": "^5.11.8",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4"
